--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "Simple user management app with nodejs (express) and redis",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "keywords": [
     "redis"
   ],
   "author": "MSALEK Mouad",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "method-override": "^3.0.0",
+    "redis": "^2.8.0"
+  }
 }
